team/pricing/contacts

--- a/Oxygen - BEM/index.html
+++ b/Oxygen - BEM/index.html
@@ -318,34 +318,34 @@
 		</div>
 	</section>
 	<section class="team">
-		<div class="team__inner">
-			<h2 class="title">Our Team</h2>
+		<div class="team__inner container">
+			<h2 class=" team__title title">Our Team</h2>
 			<div class="team__items">
 				<div class="team__item">
-					<img class="team__item-img" src="" alt="">
+					<img class="team__item-img" src="./image/team-img-ceo.png" alt="">
 					<h7 class="team__item-name">Bernard Sparks</h7>
-					<span class="team__item-posititon">CEO</span>
+					<p class="team__item-posititon">CEO</p>
 				</div>
 				<div class="team__item">
-					<img class="team__item-img" src="" alt="">
-					<h7 class="team__item-name">Bernard Sparks</h7>
-					<span class="team__item-posititon">CEO</span>
+					<img class="team__item-img" src="./image/team-img-co-founder.png" alt="">
+					<h7 class="team__item-name">MINERVA BENSON</h7>
+					<p class="team__item-posititon">Co-Founder</p>
 				</div>
 				<div class="team__item">
-					<img class="team__item-img" src="" alt="">
-					<h7 class="team__item-name">Bernard Sparks</h7>
-					<span class="team__item-posititon">CEO</span>
+					<img class="team__item-img" src="./image/team-img-sales.png" alt="">
+					<h7 class="team__item-name">JARED OLSON</h7>
+					<p class="team__item-posititon">Sales</p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<section class="pricing">
-		<div class="pricing__inner">
-			<h2 class="title">Pricing Plans</h2>
+		<div class="pricing__inner container">
+			<h2 class=" pricing__title title">Pricing Plans</h2>
 			<div class="pricing__items">
 				<div class="pricing__item">
-					<h6 class="pricing__item-name">Basic</h6>
-					<span class="pricing__item-rate">29</span>
+					<span class="pricing__item-name">Basic</span>
+					<p class="pricing__item-rate">29$<span>/mo</span></p>
 					<ul class="pricing__list">
 						<li class="pricing__list-item">1 Logo Design</li>
 						<li class="pricing__list-item">1 Website Design</li>
@@ -356,8 +356,8 @@
 					<button class="pricing__btn">CHOOSE PLAN</button>
 				</div>
 				<div class="pricing__item">
-					<h6 class="pricing__item-name">Basic</h6>
-					<span class="pricing__item-rate">29</span>
+					<span class="pricing__item-name">Starter</span>
+					<p class="pricing__item-rate">50$<span>/mo</span></p>
 					<ul class="pricing__list">
 						<li class="pricing__list-item">1 Logo Design</li>
 						<li class="pricing__list-item">1 Website Design</li>
@@ -368,20 +368,8 @@
 					<button class="pricing__btn">CHOOSE PLAN</button>
 				</div>
 				<div class="pricing__item">
-					<h6 class="pricing__item-name">Basic</h6>
-					<span class="pricing__item-rate">29</span>
-					<ul class="pricing__list">
-						<li class="pricing__list-item">1 Logo Design</li>
-						<li class="pricing__list-item">1 Website Design</li>
-						<li class="pricing__list-item">1 Domain Free</li>
-						<li class="pricing__list-item">3 Month License</li>
-						<li class="pricing__list-item">1 GB Storage</li>
-					</ul>
-					<button class="pricing__btn">CHOOSE PLAN</button>
-				</div>
-				<div class="pricing__item">
-					<h6 class="pricing__item-name">Basic</h6>
-					<span class="pricing__item-rate">29</span>
+					<span class="pricing__item-name">Professional</span>
+					<p class="pricing__item-rate">70$<span>/mo</span></p>
 					<ul class="pricing__list">
 						<li class="pricing__list-item">1 Logo Design</li>
 						<li class="pricing__list-item">1 Website Design</li>
@@ -396,25 +384,26 @@
 	</section>
 	<section class="contact">
 		<div class="contact__inner">
-			<div class="contact__content">
+			<div class="contact__content ">
+				<h2 class="contact__title title">Get in Touch</h2>
 				<form class="contact__form" action="">
-					<input class="contact__form-input" type="text" placeholder="Your Name">
+					<input class="contact__form-input" type="text" placeholder="YOUR NAME">
 					<input class="contact__form-input" type="text" placeholder="VALID EMAIL">
-					<textarea name="" id="" cols="30" rows="10" class="contact__form-input"
-						placeholder="Your Message"></textarea>
+					<textarea name="" id="" cols="30" rows="10" class="contact__form-textarea"
+						placeholder="YOUR MESSAGE"></textarea>
 					<button class="contact__form-btn">SEND MESSAGE</button>
 				</form>
 			</div>
-			<img class="contact__map" src="" alt="">
+			<div class="contact__map"></div>
 		</div>
 	</section>
 </body>
 <footer class="footer">
 	<div class="footer__inner">
 		<div class="footer__content">
-			<div class="logo">
+			<div class=" footer__logo logo">
 				<a class="logo__link" href="#">
-					<img class="logo__img" src="" alt="">
+					<img class="logo__img" src="./image/header-logo.svg" alt="">
 				</a>
 			</div>
 			<div class="footer__links">
