--- a/Oxygen - BEM/index.html
+++ b/Oxygen - BEM/index.html
@@ -407,20 +407,23 @@
 				</a>
 			</div>
 			<div class="footer__links">
-				<a href="" class="footer_link">Facebook</a>
-				<a href="" class="footer_link">TWITTER</a>
-				<a href="" class="footer_link">GOOGLE+</a>
-				<a href="" class="footer_link">BEHANCE</a>
-				<a href="" class="footer_link">DRIBBLE</a>
-				<a href="" class="footer_link">INSTAGRAM</a>
+				<a href="" class="footer__link">Facebook</a>
+				<a href="" class="footer__link">TWITTER</a>
+				<a href="" class="footer__link">GOOGLE+</a>
+				<a href="" class="footer__link">BEHANCE</a>
+				<a href="" class="footer__link">DRIBBLE</a>
+				<a href="" class="footer__link">INSTAGRAM</a>
 			</div>
 			<div class="footer__contacts">
 				<p class="footer__adress">Mese Selimovica 52,</p>
 				<a href="" class="footer__phone">(00387) 65 252 222</a>
 				<a href="" class="footer__mail">info@mail.com</a>
 			</div>
+			<div class="footer__slider">
+				<img src="./image/footer-angle-up.svg" alt="" class="footer__slider-img">
+			</div>
 		</div>
-		<div class="footer__copy"></div>
+		<div class="footer__copy">@2015 Oxygen Theme</div>
 	</div>
 </footer>
 
