--- a/Kroop/index.html
+++ b/Kroop/index.html
@@ -40,8 +40,6 @@
 				<span class="header-burger-button-line"></span>
 				<span class="header-burger-button-line"></span>
 			</button>
-
-
 		</div>
 	</header>
 	<!-- Разработка секций, все секции должны находится в теге main  -->
@@ -114,6 +112,41 @@
 						<img class="motivation-card-image" src="./image/motivation/2.jpg" alt="Man with dumbbells"
 							width="518" height="760" loading="lazy">
 					</div>
+				</li>
+			</ul>
+		</section>
+		<section class="training-types">
+			<h2 class="visually-hidden">Types of training</h2>
+			<ul class="training-types-list">
+				<li class="training-types-item">
+					<img src="./image/training-types/1.svg" alt="" class="training-types-image" width="150" height="140"
+						loading="lazy">
+					<h3 class="training-types-item-title">Maxpump</h3>
+				</li>
+				<li class="training-types-item">
+					<img src="./image/training-types/2.svg" alt="" class="training-types-image" width="150" height="140"
+						loading="lazy">
+					<h3 class="training-types-item-title">aron gym</h3>
+				</li>
+				<li class="training-types-item">
+					<img src="./image/training-types/3.svg" alt="" class="training-types-image" width="150" height="140"
+						loading="lazy">
+					<h3 class="training-types-item-title">fit & tone</h3>
+				</li>
+				<li class="training-types-item">
+					<img src="./image/training-types/4.svg" alt="" class="training-types-image" width="150" height="140"
+						loading="lazy">
+					<h3 class="training-types-item-title">forza</h3>
+				</li>
+				<li class="training-types-item">
+					<img src="./image/training-types/5.svg" alt="" class="training-types-image" width="150" height="140"
+						loading="lazy">
+					<h3 class="training-types-item-title">balance fitness</h3>
+				</li>
+				<li class="training-types-item">
+					<img src="./image/training-types/6.svg" alt="" class="training-types-image" width="150" height="140"
+						loading="lazy">
+					<h3 class="training-types-item-title">body sculpt</h3>
 				</li>
 			</ul>
 		</section>
