--- a/Kroop/index.html
+++ b/Kroop/index.html
@@ -150,6 +150,27 @@
 				</li>
 			</ul>
 		</section>
+		<section class="join-us">
+			<div class="join-us-video-wrapper">
+				<video src="" class="join-us-video" width="960" height=" 600"
+					poster="./image/video-placeholder.png"></video>
+				<button class="join-us-video-play-button">Play</button>
+			</div>
+			<div class="join-us-body container">
+				<h2 class="join-us-title">Join us</h2>
+				<header class="join-us-form-header">
+					<h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">Start here</h3>
+					<div class="join-us-form-subtitle">fill the form below to start your journey</div>
+				</header>
+				<div class="join-us-form-body">
+					<label class="visually-hidden" for="username">Name</label>
+					<input type="text" class="join-us-form-input input" id="username" placeholder="Name">
+					<label class="visually-hidden" for="email">Email</label>
+					<input type="email" class="join-us-form-input input" id="email" placeholder="Email">
+					<button class="join-us-form-button button transparent" type="submit">Subscribe</button>
+				</div>
+			</div>
+		</section>
 	</main>
 
 </body>
