--- a/Kroop/index.html
+++ b/Kroop/index.html
@@ -115,7 +115,7 @@
 				</li>
 			</ul>
 		</section>
-		<section class="training-types">
+		<section class="training-types container-wide">
 			<h2 class="visually-hidden">Types of training</h2>
 			<ul class="training-types-list">
 				<li class="training-types-item">
@@ -169,6 +169,18 @@
 					<input type="email" class="join-us-form-input input" id="email" placeholder="Email">
 					<button class="join-us-form-button button transparent" type="submit">Subscribe</button>
 				</div>
+			</div>
+		</section>
+		<section class="location container-wide">
+			<img src="./image/map.jpg" alt="Branches on the map" class="location-map-image" width="960" height="600">
+			<div class="location-body">
+				<h2 class="location-title title-medium backdrop-title centered" data-title="Look">Find us near you</h2>
+				<div class="location-description">
+					<p>Nec suas signiferumque id. An eum labore commodo principes. Usu diam noluisse cu, nam adipisci
+					</p>
+				</div>
+				<a href="/" class="location-button button transparent">View more</a>
+
 			</div>
 		</section>
 	</main>
