section family done

--- a/Kroop/index.html
+++ b/Kroop/index.html
@@ -160,7 +160,7 @@
 				<h2 class="join-us-title">Join us</h2>
 				<header class="join-us-form-header">
 					<h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">Start here</h3>
-					<div class="join-us-form-subtitle">fill the form below to start your journey</div>
+					<div class="join-us-form-subtitle section-description">fill the form below to start your journey</div>
 				</header>
 				<div class="join-us-form-body">
 					<label class="visually-hidden" for="username">Name</label>
@@ -180,6 +180,27 @@
 					</p>
 				</div>
 				<a href="/" class="location-button button transparent">View more</a>
+			</div>
+		</section>
+		<section class="family">
+			<header class="family-header container">
+				<h2 class="family-title title-big backdrop-title centered" data-title="Part">be a part of our fit
+					family</h2>
+				<div class=" family-description section-description">
+					<p>Training helps you think and feel better. join us!</p>
+				</div>
+			</header>
+			<div class="family-body container-wide">
+				<img src="./image/family/1-5.jpg" alt="Training peoples" class="family-image" width="414" height="479"
+					loading="lazy">
+				<img src="./image/family/2.jpg" alt="Training peoples" class="family-image" width="744" height="479"
+					loading="lazy">
+				<img src="./image/family/3.jpg" alt="Training peoples" class="family-image" width="396" height="479"
+					loading="lazy">
+				<img src="./image/family/4.jpg" alt="Training peoples" class="family-image" width="396" height="479"
+					loading="lazy">
+				<img src="./image/family/1-5.jpg" alt="Training peoples" class="family-image" width="414" height="479"
+					loading="lazy">
 
 			</div>
 		</section>
