--- a/Kroop/index.html
+++ b/Kroop/index.html
@@ -11,8 +11,7 @@
 <body>
 	<header class="header">
 		<a href="/" class="header-logo">
-			<img src="./image/logo.png" alt="Kropp Logo" width="135" height="25" class="header-logo-img"
-				loading="lazy"></a>
+			<img src="./image/logo.png" alt="Kropp Logo" width="135" height="25" class="header-logo-img" loading="lazy"></a>
 		<nav class="header-menu">
 			<ul class="header-menu-list">
 				<li class="header-menu-item">
@@ -109,8 +108,8 @@
 							</div>
 							<a href="#" class="motivation-card-button button transparent">View more</a>
 						</div>
-						<img class="motivation-card-image" src="./image/motivation/2.jpg" alt="Man with dumbbells"
-							width="518" height="760" loading="lazy">
+						<img class="motivation-card-image" src="./image/motivation/2.jpg" alt="Man with dumbbells" width="518"
+							height="760" loading="lazy">
 					</div>
 				</li>
 			</ul>
@@ -152,15 +151,15 @@
 		</section>
 		<section class="join-us">
 			<div class="join-us-video-wrapper">
-				<video src="" class="join-us-video" width="960" height=" 600"
-					poster="./image/video-placeholder.png"></video>
+				<video src="" class="join-us-video" width="960" height=" 600" poster="./image/video-placeholder.png"></video>
 				<button class="join-us-video-play-button">Play</button>
 			</div>
 			<div class="join-us-body container">
 				<h2 class="join-us-title">Join us</h2>
 				<header class="join-us-form-header">
 					<h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">Start here</h3>
-					<div class="join-us-form-subtitle section-description">fill the form below to start your journey</div>
+					<div class="join-us-form-subtitle section-description">fill the form below to start your journey
+					</div>
 				</header>
 				<div class="join-us-form-body">
 					<label class="visually-hidden" for="username">Name</label>
@@ -202,6 +201,73 @@
 				<img src="./image/family/1-5.jpg" alt="Training peoples" class="family-image" width="414" height="479"
 					loading="lazy">
 
+			</div>
+		</section>
+		<section class="calculate">
+			<div class="calculate-inner container">
+				<div class="calculate-body">
+					<h2 class="calculate-title title-medium backdrop-title" data-title="BMI">Input your BMI</h2>
+					<div class="calculate-description">
+						<p>Duo graece ponderum ne, ei mel aliquando. Pro te tamquam nonumes, nam no nemore epicurei</p>
+					</div>
+					<form class="calculate-form">
+						<div class="calculate-form-body">
+							<label class="visually-hidden" for="height">Height</label>
+							<input type="number" class="calculate-input input" id="height" placeholder="Height / cm">
+							<label class="visually-hidden" for="weight">Weight</label>
+							<input type="number" class="calculate-input input" id="weight" placeholder="Weight / kg">
+							<label class="visually-hidden" for="age">Age</label>
+							<input type="number" class="calculate-input input" id="age" placeholder="Age">
+							<label class="visually-hidden" for="gender">Gender</label>
+							<select class="calculate-input input" id="gender" required>
+								<option value="" disabled selected>Gender</option>
+								<option value="male">Male</option>
+								<option value="female">Female</option>
+							</select>
+							<label class="visually-hidden" for="activity-factor">Activity activity-factor</label>
+							<select class="calculate-input input wide" id="activity-factor" required>
+								<option value="" disabled selected>Select an activity factor:</option>
+								<option value="1">1</option>
+								<option value="2">2</option>
+							</select>
+
+						</div>
+						<button class="calculate-button button transparent" type="submit">Calculate</button>
+					</form>
+				</div>
+				<div class="calculate-table-wrapper">
+					<table class="calculate-table">
+						<thead>
+							<tr>
+								<th>BMI</th>
+								<th>Weight status</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Below 18.5</td>
+								<td>Underweight</td>
+							</tr>
+							<tr>
+								<td>18.5 - 24.9</td>
+								<td>Healthy</td>
+							</tr>
+							<tr>
+								<td>25.0 - 29.9</td>
+								<td>Overweight</td>
+							</tr>
+							<tr>
+								<td>30.0 - and Above</td>
+								<td>Obese</td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr>
+								<td colspan="2"><b>BMR</b> Metabolic Rate / <b>BMI</b> Body Mass Index</td>
+							</tr>
+						</tfoot>
+					</table>
+				</div>
 			</div>
 		</section>
 	</main>
