section header done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Massage</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,10 +33,10 @@
 		</nav>
 		<div class="header-actions">
 			<div class="header-contacts">
-				<p class="header-description">Служба продаж <a class="header-description-number" href="tel:+74951234567">+7 495
+				<p class="header-description">Служба продаж <br> <a class="header-description-number" href="tel:+74951234567">+7 495
 						123-45-67</a></p>
 			</div>
-			<button class="header-call-button">Заказать звонок</button>
+			<button class="header-call-button button">Заказать звонок</button>
 		</div>
 	</header>
 </body>
