--- a/Massage/index.html
+++ b/Massage/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header class="header">
-		<a href="/" class="header-logo"><img src="./images/logo.svg" alt="Massage logo" class="header-image" width="67"
+		<a href="/" class="header-logo"><img src="./images/logo.svg" alt="Massage logo" class="header-image" width="32"
 				height="32"></a>
 		<nav class="header-menu">
 			<ul class="header-menu-list">
@@ -33,7 +33,8 @@
 		</nav>
 		<div class="header-actions">
 			<div class="header-contacts">
-				<p class="header-description">Служба продаж <br> <a class="header-description-number" href="tel:+74951234567">+7 495
+				<p class="header-description">Служба продаж <br> <a class="header-description-number" href="tel:+74951234567">+7
+						495
 						123-45-67</a></p>
 			</div>
 			<button class="header-call-button button">Заказать звонок</button>
