section banner done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -40,6 +40,20 @@
 			<button class="header-call-button button">Заказать звонок</button>
 		</div>
 	</header>
+	<main class="content">
+		<h1 class="visually-hidden">Private massage club</h1>
+		<section class="banner container-wide">
+			<img src="./images/banner/1.jpg" alt="The person doing the massage" class="banner-image" loading="lazy">
+			<div class="banner-body">
+				<h2 class="banner-title">Частный массажист</h2>
+				<div class="banner-description description">
+					<p>Медицинский массаж от дипломированного специалиста с многолетним опытом</p>
+				</div>
+				<button class="banner-button button button-aletenative" type="button">Записаться на массаж</button>
+				<span class="banner-discount">Первый сеанс со скидкой 50%</span>
+			</div>
+		</section>
+	</main>
 </body>
 
 </html>
