section regalie done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -53,6 +53,41 @@
 				<span class="banner-discount">Первый сеанс со скидкой 50%</span>
 			</div>
 		</section>
+		<section class="regalia">
+			<div class="regalia-body container">
+				<h2 class="visually-hidden">My regalia</h2>
+				<ul class="regalia-list">
+					<li class="regalia-list-item">
+						<div class="regalia-image"></div>
+						<h3 class="regalia-title">Образование</h3>
+						<div class="regalia-description">
+							<p>У меня высшее медицинское образование по специальности массажист</p>
+						</div>
+					</li>
+					<li class="regalia-list-item">
+						<div class="regalia-image"></div>
+						<h3 class="regalia-title">5 лет</h3>
+						<div class="regalia-description">
+							<p>На протяжении 5 лет частной практики не умер ни один пациент</p>
+						</div>
+					</li>
+					<li class="regalia-list-item">
+						<div class="regalia-image"></div>
+						<h3 class="regalia-title">300 клиентов</h3>
+						<div class="regalia-description">
+							<p>300 постоянных клиентов, многие из которых постоянные</p>
+						</div>
+					</li>
+					<li class="regalia-list-item">
+						<div class="regalia-image"></div>
+						<h3 class="regalia-title">99,9%</h3>
+						<div class="regalia-description">
+							<p>99,9% моих клиентов остаются довольны на 100%</p>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 </body>
 
