section about-us done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -42,7 +42,7 @@
 	</header>
 	<main class="content">
 		<h1 class="visually-hidden">Private massage club</h1>
-		<section class="banner container-wide">
+		<section class="banner card-wide container-wide">
 			<img src="./images/banner/1.jpg" alt="The person doing the massage" class="banner-image" loading="lazy">
 			<div class="banner-body">
 				<h2 class="banner-title">Частный массажист</h2>
@@ -86,6 +86,23 @@
 						</div>
 					</li>
 				</ul>
+			</div>
+		</section>
+		<section class="aboutus card-wide container-wide">
+			<img src="./images/aboutus/1.jpg" alt="A handsome man is looking at you" class="aboutus-image" loading="lazy">
+			<div class="aboutus-wrapper">
+				<div class="aboutus-body">
+					<h4 class="aboutus-header">О компании</h4>
+					<h2 class="aboutus-title">Более 5 лет
+						делаю массаж</h2>
+					<div class="aboutus-description description">
+						<p>Это ваш голосовой клон AI. Мы фиксируем ваши уникальные речевые образцы, произношение и эмоциональный
+							диапазон, чтобы
+							создать реалистичный голос-реплику.</p>
+						<p>Загрузите записи или выполните один из наших сценариев, чтобы создать свой собственный голос.</p>
+					</div>
+					<button class="aboutus-button button button-aletenative" type="button">Подробнее</button>
+				</div>
 			</div>
 		</section>
 	</main>
