section serivces done + adaptive

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -105,6 +105,45 @@
 				</div>
 			</div>
 		</section>
+		<section class="services">
+			<div class="services-wrapper container">
+				<div class="services-header">
+					<h4 class="services-heading">Мои услуги</h4>
+					<h2 class="services-title">Выберите подходящее</h2>
+					<div class="services-description description">Продавать больше - это все, что нужно, чтобы направлять
+						посетителей через правильные шаги</div>
+				</div>
+				<div class="services-body">
+					<ul class="services-list">
+						<li class="services-item">
+							<img src="./images/services/1.jpg" class="services-image" alt="A girl pouring oil on her hands"
+								loading="lazy" width="350" height="380">
+							<h3 class="services-item-title">Тайский массаж</h3>
+						</li>
+						<li class="services-item">
+							<img src="./images/services/2.jpg" class="services-image" alt="A man doing a massage" loading="lazy"
+								width="350" height="380">
+							<h3 class="services-item-title">Массаж спины</h3>
+						</li>
+						<li class="services-item">
+							<img src="./images/services/3.jpg" class="services-image" alt="An adult man gets a massage" loading="lazy"
+								width="350" height="380">
+							<h3 class="services-item-title">Массаж шеи</h3>
+						</li>
+						<li class="services-item">
+							<img src="./images/services/4.jpg" class="services-image" alt="A small child is getting a massage"
+								loading="lazy" width="350" height="380">
+							<h3 class="services-item-title">Детский массаж</h3>
+						</li>
+						<li class="services-item">
+							<img src="./images/services/5.jpg" class="services-image" alt="Neck massage" loading="lazy" width="350"
+								height="380">
+							<h3 class="services-item-title">Массаж на рабочем</h3>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
