section diploma done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -144,6 +144,28 @@
 				</div>
 			</div>
 		</section>
+		<section class="diploma">
+			<div class="diploma-wrapper container">
+				<h2 class="diploma-title">Мои дипломы</h2>
+				<div class="diploma-body">
+					<ul class="diploma-list">
+						<li class="diploma-item">
+							<img src="./images/diploma/1.png" alt="">
+						</li>
+						<li class="diploma-item">
+							<img src="./images/diploma/1.png" alt="">
+						</li>
+						<li class="diploma-item">
+							<img src="./images/diploma/1.png" alt="">
+						</li>
+						<li class="diploma-item">
+							<img src="./images/diploma/1.png" alt="">
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		</section>
 	</main>
 </body>
 
