section reviews done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -166,6 +166,43 @@
 
 			</div>
 		</section>
+		<section class="reviews">
+			<div class="reviews-wrapper container">
+				<div class="reviews-header">
+					<h2 class="reviews-title">Отзывы</h2>
+					<div class="reviews-description description">
+						<p>Мне приятно, что вы цените мою работу. А особенно приятно - когда находите несколько минут, чтобы
+							написать отзыв</p>
+					</div>
+				</div>
+				<div class="reviews-body">
+					<ul class="reviews-card">
+						<li class="reviews-card-item">
+							<img src="./images/reviews/1.png" alt="Reviewers foto" width="64" height="64" class="reviews-img">
+							<div class="reviews-card-description description">
+								<p>Это супер крутая инструкция и вы делаете очень полезную вещь 🙂 Спасибо ❤️</p>
+							</div>
+							<div class="reviews-user">
+								<p class="reviews-user-name">Юрий Ставничий</p>
+								<p class="reviews-user-post">фотограф</p>
+							</div>
+						</li>
+						<li class="reviews-card-item">
+							<img src="./images/reviews/1.png" alt="Reviewers foto" width="64" height="64" class="reviews-img">
+							<div class="reviews-card-description description">
+								<p>Работа с сервисом приносит радость, потому что высочайший профессионализм, удобство, оперативность, и
+									просто приятные
+									люди!</p>
+							</div>
+							<div class="reviews-user">
+								<p class="reviews-user-name">Александра Селезнева</p>
+								<p class="reviews-user-post">фотограф</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
