section appointment done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -203,6 +203,49 @@
 				</div>
 			</div>
 		</section>
+		<section class="appointment">
+			<div class="appointment-wrapper">
+				<div class="appointment-header">
+					<h2 class="appointment-title">Запишитесь на массаж</h2>
+					<div class="appointment-description description">
+						<p>Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности</p>
+					</div>
+				</div>
+				<div class="appointment-body">
+					<form class="appointment-form">
+						<div class="appointment-form-body">
+							<label for="name" class="visually-hidden">Имя</label>
+							<input type="text" id="name" placeholder="Ваше имя" class="appointment-input">
+							<label for="email" class="visually-hidden">Email</label>
+							<input type="text" class="appointment-input" placeholder="Введите почту" id="email">
+							<label for="email-2" class="visually-hidden">Email-2</label>
+							<input type="email" class="appointment-input" placeholder="E-mail">
+							<div class="appointment-delivery">
+								<h4 class="appointment-delivery-title">Выберите способ доставки</h4>
+								<ul class="appointment-delivery-list">
+									<li class="appointment-delivery-item">
+										<input class="appointment-delivery-input" id="to-house" type="radio">
+										<label for="to-house" class="appointment-delivery-label">До квартиры</label>
+									</li>
+									<li class="appointment-delivery-item">
+										<input class="appointment-delivery-input" id="to-entrance" type="radio">
+										<label for="to-entrance" class="appointment-delivery-label">До подъезда</label>
+									</li>
+									<li class="appointment-delivery-item">
+										<input class="appointment-delivery-input" id="pickup" type="radio">
+										<label for="pickup" class="appointment-delivery-label">Самовывоз</label>
+									</li>
+								</ul>
+							</div>
+							<button class="appointment-button button-aletenative" type="submit">Оставить заявку</button>
+							<div class="appointment-approval">Оставляя заявку, вы соглашаетесь на <a href="#">обработку персональных
+									данных</a>
+								и с <a href="#">условиями бронирования счёта</a></div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
