section contacts done

--- a/Massage/index.html
+++ b/Massage/index.html
@@ -246,6 +246,19 @@
 				</div>
 			</div>
 		</section>
+		<section class="contacts card-wide container-wide">
+			<h2 class="visually-hidden">Contacts</h2>
+			<div class="contacts-wrapper">
+				<div class="contacts-body">
+					<h3 class="contacts-title">Контакты</h3>
+					<a href="tel:+79876543210" class="contacts-link">+7 987 654-32-10</a><br>
+					<a href="mailto:info@constructor.ru" class="contacts-link is-brighter">info@constructor.ru</a>
+					<br><br>
+					<address class="contacts-link">г. Москва, метро “Китай город”, <br> ул. Яузская, дом 15/11</address>
+				</div>
+			</div>
+			<div class="contacts-image"></div>
+		</section>
 	</main>
 </body>
 
