section header adaptive done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header class="header">
 		<a href="/" class="header-logo">
-			<img src="./image/logo.png" alt=" Technic Logo" class="header-logo-img" width="216" height="21" loading="lazy">
+			<img src="./image/logo-767.svg" alt=" Technic Logo" class="header-logo-img" width="50" height="50" loading="lazy">
 		</a>
 		<nav class="header-menu">
 			<ul class="header-menu-list">
