section trust-us and section reviews done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -34,6 +34,103 @@
 			<button class="header-button">Заказать звонок</button>
 		</div>
 	</header>
+	<main class="content">
+		<h1 class="visually-hidden">Repair of equipment </h1>
+		<section class="banner">
+			<div class="banner-wrapper container">
+				<h2 class="banner-title title-big">Ремонт ноутбуков <br> в вашем городе</h2>
+				<div class="banner-description description">
+					<p>
+						Ремонт ноутбуков и другой техники в вашем городе по самым низким ценам
+					</p>
+				</div>
+				<div class="banner-buttons">
+					<button class="banner-button-application button button-yellow">Оставить заявку</button>
+					<button class="banner-button-details button button-white">Узнать подробности</button>
+					<div class="banner-button-description description">
+						<p>Оставьте заявку прямо сейчас и получите в подарок бесплатную диагностику с выездом на дом</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="trust-us">
+			<div class="trust-us-wrapper container">
+				<div class="trust-us-header">
+					<h2 class="trust-us-title title-big is-blue">Нам доверяют</h2>
+					<div class="trust-us-description description">
+						<p>Более 5 000 физических и юридических лиц доверили нам ремонт своей техники</p>
+					</div>
+				</div>
+				<div class="trust-us-body">
+					<ul class="trust-us-list">
+						<li class="trust-us-item">
+							<div class="trust-us-item-image"></div>
+							<h3 class="trust-us-item-title is-blue">Гарантия 5 месяцев</h3>
+							<div class="trust-us-item-description">
+								<p>Создавайте счёт и отправляйте контрагенту одной кнопкой</p>
+							</div>
+						</li>
+						<li class="trust-us-item">
+							<div class="trust-us-item-image"></div>
+							<h3 class="trust-us-item-title is-blue">Выезжаем к вам домой</h3>
+							<div class="trust-us-item-description">
+								<p>Создавайте счёт и отправляйте контрагенту одной кнопкой</p>
+							</div>
+						</li>
+						<li class="trust-us-item">
+							<div class="trust-us-item-image"></div>
+							<h3 class="trust-us-item-title is-blue">Более 5 лет на рынке</h3>
+							<div class="trust-us-item-description">
+								<p>Создавайте счёт и отправляйте контрагенту одной кнопкой</p>
+							</div>
+						</li>
+						<li class="trust-us-item">
+							<div class="trust-us-item-image"></div>
+							<h3 class="trust-us-item-title is-blue">Чиним всю технику</h3>
+							<div class="trust-us-item-description">
+								<p>Создавайте счёт и отправляйте контрагенту одной кнопкой</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="reviews">
+			<button class="reviews-button-left button-slider"></button>
+			<div class="reviews-body">
+				<img src="./image/reviews/1.png" alt="" class="reviews-image" width="64px" height="64px" loading="lazy              ">
+				<div class="reviews-text is-blue">
+					<p>Работа с сервисом приносит радость, потому что высочайший профессионализм, удобство, оперативность, и
+						просто приятные
+						люди!</p>
+				</div>
+				<div class="reviews-person">
+					<span class="reviews-name is-blue">Александра Селезнева</span>
+					<span class="reviews-post">фотограф</span>
+				</div>
+				<div class="reviews-pagination">
+					<ul class="reviews-pagination-list">
+						<li class="reviews-pagination-item">
+							<button class="button-reviews-pagination-button" type="button"></button>
+						</li>
+						<li class="reviews-pagination-item">
+							<button class="button-reviews-pagination-button" type="button"></button>
+						</li>
+						<li class="reviews-pagination-item">
+							<button class="button-reviews-pagination-button" type="button"></button>
+						</li>
+						<li class="reviews-pagination-item">
+							<button class="button-reviews-pagination-button" type="button"></button>
+						</li>
+						<li class="reviews-pagination-item">
+							<button class="button-reviews-pagination-button" type="button"></button>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<button class="reviews-button-right button-slider"></button>
+		</section>
+	</main>
 </body>
 
 </html>
