--- a/Technic/index.html
+++ b/Technic/index.html
@@ -98,7 +98,8 @@
 		<section class="reviews">
 			<button class="reviews-button-left button-slider"></button>
 			<div class="reviews-body">
-				<img src="./image/reviews/1.png" alt="" class="reviews-image" width="64px" height="64px" loading="lazy              ">
+				<img src="./image/reviews/1.png" alt="" class="reviews-image" width="64px" height="64px"
+					loading="lazy              ">
 				<div class="reviews-text is-blue">
 					<p>Работа с сервисом приносит радость, потому что высочайший профессионализм, удобство, оперативность, и
 						просто приятные
@@ -111,19 +112,19 @@
 				<div class="reviews-pagination">
 					<ul class="reviews-pagination-list">
 						<li class="reviews-pagination-item">
-							<button class="button-reviews-pagination-button" type="button"></button>
+							<button class="reviews-pagination-button is-current" type="button"></button>
 						</li>
 						<li class="reviews-pagination-item">
-							<button class="button-reviews-pagination-button" type="button"></button>
+							<button class="reviews-pagination-button" type="button"></button>
 						</li>
 						<li class="reviews-pagination-item">
-							<button class="button-reviews-pagination-button" type="button"></button>
+							<button class="reviews-pagination-button" type="button"></button>
 						</li>
 						<li class="reviews-pagination-item">
-							<button class="button-reviews-pagination-button" type="button"></button>
+							<button class="reviews-pagination-button" type="button"></button>
 						</li>
 						<li class="reviews-pagination-item">
-							<button class="button-reviews-pagination-button" type="button"></button>
+							<button class="reviews-pagination-button" type="button"></button>
 						</li>
 					</ul>
 				</div>
