section order done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -131,6 +131,27 @@
 			</div>
 			<button class="reviews-button-right button-slider"></button>
 		</section>
+		<section class="order">
+			<div class="order-wrapper">
+				<div class="order-header">
+					<h2 class="order-title title-medium">Закажи онлайн</h2>
+					<div class="order-description description">
+						<p>Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности</p>
+					</div>
+				</div>
+				<div class="order-body">
+					<form class="order-form">
+						<label for="input-number" class="visually-hidden"></label>
+						<input type="text" class="order-input-number input" id="input-number" placeholder="+7 (000) 000-000">
+						<button class="order-button button button-yellow" type="submit">Оставить заявку</button>
+					</form>
+					<div class="order-body-description">
+						<p><span>Оставляя заявку, вы соглашаетесь на</span> обработку персональных данных <span>и с</span> условиями
+							бронирования счёта</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
