section team done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -152,6 +152,44 @@
 				</div>
 			</div>
 		</section>
+		<section class="team">
+			<div class="team-wrapper container">
+				<div class="team-header">
+					<div class="team-clogan">
+						<p>Лучшие в совем деле</p>
+					</div>
+					<h2 class="team-title title-big is-blue">Наша команда</h2>
+					<div class="team-description description">
+						<p>Вот уже 12 лет мы помогаем вашей техники служить долго</p>
+					</div>
+				</div>
+				<div class="team-body">
+					<ul class="team-list">
+						<li class="team-item">
+							<img src="./image/team/1.png" alt="" class="team-image" width="320" height="320" loading="lazy">
+							<h3 class="team-name is-blue">Леонардо Дикаприо</h3>
+							<div class="team-item-subtitle">
+								<p>Ремонтирую ноутбуки</p>
+							</div>
+						</li>
+						<li class="team-item">
+							<img src="./image/team/2.png" alt="" class="team-image" width="320" height="320" loading="lazy">
+							<h3 class="team-name is-blue">Олег Майами</h3>
+							<div class="team-item-subtitle">
+								<p>Устанавливаю ПО</p>
+							</div>
+						</li>
+						<li class="team-item">
+							<img src="./image/team/3.png" alt="" class="team-image" width="320" height="320" loading="lazy">
+							<h3 class="team-name is-blue">Снежный барсук</h3>
+							<div class="team-item-subtitle">
+								<p>Чиню приставки</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
