section servises done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -190,6 +190,57 @@
 				</div>
 			</div>
 		</section>
+		<section class="servises">
+			<div class="servises-wrapper container">
+				<div class="servises-header">
+					<h2 class="servises-title title-medium ">Пакеты услуг</h2>
+					<div class="servises-description description">Выберите подходящий пакет услуг</div>
+				</div>
+				<div class="servises-body">
+					<ul class="servises-list">
+						<li class="servises-item">
+							<div class="servises-item-wrapper">
+								<h3 class="servises-item-title is-blue title-medium">0 ₽</h3>
+								<p class="servises-item-subtitle is-blue">Диагностика вашей техники</p>
+								<div class="servises-item-description">
+									<p>Проведём полную диагностику вашей техники. Вы можете привезти технику в наш офис, либо мы сами
+										заберём её из вашего дома
+										или офиса</p>
+								</div>
+							</div>
+							<button class="servises-item-button button-yellow button" type="button">Рассчитать</button>
+						</li>
+						<li class="servises-item">
+							<div class="servises-item-wrapper">
+								<h3 class="servises-item-title is-blue title-medium">от 990 ₽</h3>
+								<p class="servises-item-subtitle is-blue">Ремонт ноутбуков</p>
+								<div class="servises-item-description">
+									<p>- Замена дисплея<br>- Установка оперативной памяти<br>- Установка ОС <br>- Чистка от вирусов
+										<br> - Установка
+										программного
+										обеспечения и т. д.
+									</p>
+								</div>
+							</div>
+							<button class="servises-item-button button-yellow button" type="button">Рассчитать</button>
+						</li>
+						<li class="servises-item">
+							<div class="servises-item-wrapper">
+								<h3 class="servises-item-title is-blue title-medium">от 495 ₽</h3>
+								<p class="servises-item-subtitle is-blue">Ремонт другой электроники</p>
+								<div class="servises-item-description">
+									<p>- Ремонт зарядных устройств<br>- Замена дисплеев <br>- Пайка микросхем<br>- Установка
+										комплектующих <br>- Ремонт
+										портативных
+										компьютеров,ПК <br>- Ремонт роутерови т. д.</p>
+								</div>
+							</div>
+							<button class="servises-item-button button-yellow button" type="button">Рассчитать</button>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
