section contract test done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -145,7 +145,7 @@
 						<input type="text" class="order-input-number input" id="input-number" placeholder="+7 (000) 000-000">
 						<button class="order-button button button-yellow" type="submit">Оставить заявку</button>
 					</form>
-					<div class="order-body-description">
+					<div class="order-body-description approval-text">
 						<p><span>Оставляя заявку, вы соглашаетесь на</span> обработку персональных данных <span>и с</span> условиями
 							бронирования счёта</p>
 					</div>
@@ -239,6 +239,83 @@
 						</li>
 					</ul>
 				</div>
+			</div>
+		</section>
+		<section class="abilities">
+			<div class="abilities-wrapper container">
+				<h2 class="abilities-title title-big is-blue">Ремонт всех марок</h2>
+				<div class="abilities-body">
+					<ul class="abilities-list">
+						<li class="abilities-item">
+							<img src="./image/abilities/1.jpg" alt="" class="abilities-image" width="255" height="160" loading="lazy">
+						</li>
+						<li class="abilities-item">
+							<img src="./image/abilities/2.jpg" alt="" class="abilities-image" width="255" height="160" loading="lazy">
+						</li>
+						<li class="abilities-item">
+							<img src="./image/abilities/3.jpg" alt="" class="abilities-image" width="255" height="160" loading="lazy">
+						</li>
+						<li class="abilities-item">
+							<img src="./image/abilities/4.jpg" alt="" class="abilities-image" width="255" height="160" loading="lazy">
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="feedback">
+			<div class="feedback-header">
+				<h2 class="feedback-title title-medium">Свяжитесь с нами</h2>
+				<div class="feedback-description description">
+					<p>Оставьте заявку на банковскую гарантию</p>
+				</div>
+			</div>
+			<div class="feedback-body">
+				<form class="feedback-form">
+					<label class="visually-hidden" for="name"></label>
+					<input type="text" class="feedback-form-input input" placeholder="Ваше имя" id="name">
+
+					<label class="visually-hidden" for="number"></label>
+					<input type="number" class="feedback-form-input input" placeholder="+7 (000) 000-0000" id="number">
+
+					<label class="visually-hidden" for="email"></label>
+					<input type="email" class="feedback-form-input input" placeholder="E-mail" id="email">
+					<button class="feedback-form-button button">Оставить заявку</button>
+				</form>
+				<div class="feedback-form-description approval-text">
+					<p><span>Оставляя заявку, вы соглашаетесь на</span> обработку персональных данных <span>и с</span> условиями
+						бронирования счёта</p>
+				</div>
+			</div>
+		</section>
+		<section class="contract">
+			<div class="contract-header">
+				<h2 class="contract-title title-medium">Закажите ремонт техники</h2>
+				<div class="contract-subtitle">Заполните форму и закажите полис</div>
+			</div>
+			<div class="contract-body">
+				<form class="contract-form">
+					<label class="visually-hidden" for="youname"></label>
+					<input type="text" class="contract-form-input input" id="youname">
+
+					<label class="visually-hidden" for="younumber"></label>
+					<input type="number" class="contract-form-input input" id="younumber">
+
+					<label class="visually-hidden" for="youemail"></label>
+					<input type="email" class="contract-form-input input" id="youemail">
+					<p class="contract-form-description">Какой полис вас интересует</p>
+
+					<label for="kacko" class="contract-form-label">КАСКО</label>
+					<input type="radio" class="contract-form-input" id="kacko">
+
+					<label for="ocago" class="contract-form-label">ОСАГО</label>
+					<input type="radio" class="contract-form-input" id="ocago">
+
+					<label for="life" class="contract-form-label">Страхование жизни</label>
+					<input type="radio" class="contract-form-input" id="life">
+					<button class="contract-form-button button button-yellow">Заказать полис</button>
+				</form>
+				<div class="contract-description approval-text">Оставляя заявку, вы соглашаетесь на обработку персональных
+					данных и с условиями бронирования счёта</div>
 			</div>
 		</section>
 	</main>
