section project done, maket done

--- a/Technic/index.html
+++ b/Technic/index.html
@@ -287,6 +287,16 @@
 				</div>
 			</div>
 		</section>
+		<section class="project">
+			<div class="project-wrapper container">
+				<div class="project-card "><img src="./image/project/1.jpg" alt="" class="project-image" width="540"
+						height="810"></div>
+				<div class="project-card"><img src="./image/project/2.jpg" alt="" class="project-image" width="540"
+						height="390"></div>
+				<div class="project-card"><img src="./image/project/3.jpg" alt="" class="project-image" width="540"
+						height="390"></div>
+			</div>
+		</section>
 		<section class="contract">
 			<div class="contract-header">
 				<h2 class="contract-title title-medium">Закажите ремонт техники</h2>
