--- a/Positivus-site/index.html
+++ b/Positivus-site/index.html
@@ -42,7 +42,7 @@
 	</header>
 	<dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
 		<form class="mobile-overlay__close-button-wrapper" method="dialog">
-			<button class="mobile-overlay__close-button close-button" type="submit">
+			<button class="mobile-overlay__close-button cross-button" type="submit">
 				<span class="visually-hidden"> Close navigation menu</span>
 			</button>
 		</form>
